tooling/nargo_cli/tests/snapshots/compile_failure/broken_impl/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected a trait, found error
  ┌─ src/main.nr:2:10
  │
2 │ impl< Foo for
  │          -
  │

error: Expected a generic parameter but found 'for'
  ┌─ src/main.nr:2:11
  │
2 │ impl< Foo for
  │           ---
  │

error: Expected a type but found 'for'
  ┌─ src/main.nr:2:11
  │
2 │ impl< Foo for
  │           ---
  │

error: Expected a type but found end of input
  ┌─ src/main.nr:2:14
  │  
2 │   impl< Foo for
  │ ╭─────────────'
3 │ │ 
  │ ╰'
  │  

error: Expected a '{' but found end of input
  ┌─ src/main.nr:2:14
  │  
2 │   impl< Foo for
  │ ╭─────────────'
3 │ │ 
  │ ╰'
  │  

Aborting due to 5 previous errors
