tooling/nargo_cli/tests/snapshots/compile_failure/broken_impl/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected a generic parameter but found 'for'
  ┌─ src/main.nr:2:11
  │
2 │ impl< Foo for
  │           ---
  │

error: Expected a type but found 'for'
  ┌─ src/main.nr:2:11
  │
2 │ impl< Foo for
  │           ---
  │

error: Expected a type but found end of input
  ┌─ src/main.nr:2:14
  │  
2 │   impl< Foo for
  │ ╭─────────────'
3 │ │ 
  │ ╰'
  │  

error: Expected a '{' but found end of input
  ┌─ src/main.nr:2:14
  │  
2 │   impl< Foo for
  │ ╭─────────────'
3 │ │ 
  │ ╰'
  │  

error: Expected a trait, found error
  ┌─ src/main.nr:2:10
  │
2 │ impl< Foo for
  │          -
  │

error: The type parameter `Foo` is not constrained by the impl trait, self type, or predicates
  ┌─ src/main.nr:2:7
  │
2 │ impl< Foo for
  │       --- Hint: remove the `Foo` type parameter
  │

Aborting due to 6 previous errors
